add insertion sort with animation

--- a/algo-sorting/src/App.css
+++ b/algo-sorting/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
