--- a/algo-sorting/src/components/BottomNavbar/BottomNavbar.css
+++ b/algo-sorting/src/components/BottomNavbar/BottomNavbar.css
@@ -1,3 +1,13 @@
 .bgColor {
     background-color: #00a6fb !important;
 }
+
+.text {
+    color:white;
+    font-weight: 600;
+}
+
+
+.txtCenter {
+    text-align: center;
+}
