--- a/algo-sorting/src/containers/Dashboard/Dashboard.css
+++ b/algo-sorting/src/containers/Dashboard/Dashboard.css
@@ -1,3 +1,22 @@
 .BarContainer{
     vertical-align: bottom;
 }
+
+.btnGenerate{
+    border-radius: 20px;
+    background-color: #06d6a0;
+    margin: 4px;
+    border: 0px;
+    padding: 4px 10px;
+    color: white;
+}
+
+.btnSort{
+    border-radius: 20px;
+    background-color: #26547c;
+    margin: 4px;
+    border: 0px;
+    padding: 4px 10px;
+    color: white;
+}
+
